kubernetes/main/apps/kube-system/cilium/netpols/allow-egress-minio.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-minio
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/minio: allow
  egress:
    - toFQDNs:
        - matchName: s3.bjw-s.dev
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
