kubernetes/main/apps/kube-system/cilium/netpols/allow-egress-world.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-world
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/world: allow
  egress:
    - toEntities:
        - world
